--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+
+  <!-- Navigation bar -->
   <div class="container">
     <div class="nav_section">
       <nav class="navbar navbar-expand-lg navbar-light ">
@@ -39,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" style="color: #f9db00 !important" href="#">Home</a>
+              <a class="nav-link" style="color: #F87652 !important" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
@@ -444,7 +446,7 @@
   </script>
   <script type="text/javascript" src="./Js/app.js"></script>
   <script type="text/javascript" src="./Js/particles.js"></script>
-
+  <script type="text/javascript" src="./Js/theme.js"></script>
 </body>
 
 </html>
